Quorum3/Library/Tests/Templating/Fail/IteratorNoTemplate.quorum
use Libraries.Containers.List 
use Libraries.Containers.Blueprints.Iterator 

class Main
    List<integer> list 

    action Main 
        Iterator<number> iterator = list:GetIterator() 
        integer x = 0 
        x = iterator:Next() 
    end
end